--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@ body {
 button {
   font-family: "Roboto", sans-serif;
 }
+button:focus {
+  border: none;
+  outline: none;
+}
 path,
 i,
 svg {
@@ -49,6 +53,7 @@ svg {
   /* We are adding an adjustemnt class */
   transform: translateY(100px);
   transition: all 0.5s ease-in-out;
+  color: #636e72;
 }
 .sliders.active {
   opacity: 1;
@@ -89,6 +94,10 @@ svg {
   color: white;
   cursor: pointer;
   border-radius: 1rem;
+  transition: background .25s ease;
+}
+.panel button:hover {
+  background: #222aca;
 }
 .panel p {
   font-size: 1.2rem;
@@ -196,6 +205,7 @@ input[type="range"] {
   border-radius: 10px;
   color: white;
   cursor: pointer;
+  font-size: 1.1rem;
 }
 
 .library-popup {
@@ -280,7 +290,7 @@ input[type="range"] {
 }
 .fa-palette {
   font-size: 5rem;
-  color: #ff6b81;
+  color: #00a8ff;
   margin: 20px;
 }
 .loading {
